src/app.css
@font-face {
  font-display: swap;
  font-family: "Oswald";
  font-style: normal;
  font-weight: 300;
  src: url(https://fonts.gstatic.com/s/oswald/v49/TK3_WkUHHAIjg75cFRf3bXL8LICs169vsUZiZQ.woff2)
    format("woff2");
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  transition:  0.325s all linear;
  min-height: 100%;
  height: 100%;

}

@media screen and (width <= 834px) { 
  main, #dnd-action-dragged-el > * {
    scale: 0.9;
    translate: 12% -5%;
  }
}

@media screen and (width <= 810px) { 
  main, #dnd-action-dragged-el > * {
    scale: 0.9;
    translate: 12% -5%;
  }
}


  @media screen and (width <= 768px) { 
    main, #dnd-action-dragged-el > * {
      scale: 0.9;
      translate: 9% -5%;
    }
  }
  
  @media screen and (width <= 428px) { 
  /* 424x736 */
  main, #dnd-action-dragged-el > * {
    scale: 0.6;
    translate: -18% -20%;
  }
}
@media screen and (width <= 414px) { 
  /* 424x736 */
  main, #dnd-action-dragged-el > * {
    scale: 0.6;
    translate: -19% -20%;
  }
}

@media screen and (width <= 390px) { 
  /* 424x736 */
  main, #dnd-action-dragged-el > * {
    scale: 0.6;
    translate: -21% -20%;
  }
}
@media screen and (width <= 384px) { 
  /* 424x736 */
  main, #dnd-action-dragged-el > * {
    scale: 0.6;
    translate: -21.5% -20%;
  }
}


  @media only screen and (width <= 375px)  { 
    /* 375x812  */
    main, #dnd-action-dragged-el > * {
      scale: 0.58;
    translate: -22% -21%;
  }
}


@media screen and (width <= 360px) { 
    /*360x700*/
    main, #dnd-action-dragged-el > * {
      scale: 0.5;
      translate: -23% -25%;
    }
  }
@media screen and (width <= 320px) { 
  /*360x700*/
  main, #dnd-action-dragged-el > * {
    scale: 0.5;
    translate: -26.3% -25%;
  }
}



html > * {
  transition: color 0.325s linear;
  transition: stroke 0.325s linear;
  transition: fill 0.325s linear;
  transition: background-color 0.325s linear;
  transition: background 0.325s linear;
}

*:focus-visible{
  outline: 5px solid #0e64d4; 
}

.topBar {
  display: flex;
  justify-content: left;
  margin-left: 25px;
  padding-top: 1%;
}

.tName {
  height: 80px;
  width: 420px;

  padding-right: 1%;
  padding-left: 1%;
  font-size: 3rem;
  margin-right: 1%;
  margin-left: 1%;
  overflow: hidden;
  user-select: none;
}


.circle {
  transition: stroke 0.325s linear;
  transition: fill 0.325s linear;
}

.fillT {
  transition: fill 0.325s linear;
}

.innerSettings {
  display: flex;
  justify-content: space-evenly;
  margin: 10px;
  gap:20px;
  flex-wrap: wrap;
}
.fadeIn {
  animation: fadeInAnimation 0.325s linear;
}
.fadeOut {
  animation: fadeInAnimation 0.325s reverse; 
}

.bottomBar {
  display: flex;
  justify-content: left;
  margin-top: 25px;
  margin-left: 25px;
  width: 480px;
}

.innerTask {
  -webkit-transition: 0.2s -webkit-filter linear;
  -moz-transition: 0.2s -moz-filter linear;
  -moz-transition: 0.2s filter linear;
  transition: 0.2s filter linear;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes move {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(30%);
  }
}


body {
  min-height: auto;
  height: 100%;
}
#app {
  font-family: "Oswald";
  min-height: 100%;
  height: 100%;
  
}

